--- a/LatexTFG/Capitulos/03Capitulo3.tex
+++ b/LatexTFG/Capitulos/03Capitulo3.tex
@@ -27,9 +27,9 @@ Para la correcta funcionalidad del proyecto, ha sido necesario configurar el har
 %-------------------------------------------------------------------
 \label{cap3:sec:inicial}
 
-Tras haber realizado la elección del tema en el que se basaría nuestro trabajo de fin de grado, así como tras la elección del director que dirigiría dicho trabajo, estábamos ansiosos de empezar lo antes posible e introducirnos en la materia. Nos pareció apasionante la idea de poder desarrollar software para dispositivos empotrados, y aun más, sabiendo que el campo con el que estaría íntimamente relacionado sería la medicina. Tras los sabios consejos que nos transmitió Joaquín sobre que placa concreta usar, de que hardware podríamos disponer para la realización del proyecto, así como el software que se nos podría facilitar, estábamos decididos a comenzar. La placa hardware sobre la que desarrollaríamos finalmente se trataba de una BeagleBone Black.
+Tras haber realizado la elección del tema en el que se basaría nuestro trabajo de fin de grado, así como tras la elección del director que dirigiría dicho trabajo, estabamos ansiosos de empezar lo antes posible e introducirnos en la materia. Nos pareció apasionante la idea de poder desarrollar software para dispositivos empotrados, y aun más, sabiendo que el campo con el que estaría íntimamente relacionado sería la medicina. Tras los sabios consejos que nos transmitió Joaquín sobre que placa concreta usar, de que hardware podríamos disponer para la realización del proyecto, así como el software que se nos podría facilitar, estabamos decididos a comenzar. La placa hardware sobre la que desarrollariamos finalmente se trataba de una BeagleBone Black.
 
-Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder comenzar a trabajar y sentar las bases de un proyecto mucho mayor. Este proyecto además podía funcionar correctamente con diversos chips de Texas Instruments, concretamente nosotros escogimos el chip ADS1198. Este chip generaba simulaciones de muestras de forma continua. El código proporcionado era relativamente sencillo y fácil de entender. Se trataba de un programa realizado en C capaz de leer en espacio de usuario del dispositivo (en nuestro caso la BBB). Es decir, era capaz de recibir y tratar toda la información recibida de forma continua por el chip ADS1198. Hasta aquí todo es relativamente sencillo, gracias al protocolo SPI y al programa de usuario en C era posible gestionar toda la información recibida de las muestras simuladas y realizar el tratamiento pertinente. El único problema hasta aquí es que realmente no era posible gestionar toda la información, si no más bien, casi toda la información.
+Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder comenzar a trabajar y sentar las bases de un proyecto mucho mayor. Este proyecto además podía funcionar correctamente con diversos chips de Texas Instruments,concretamente nosotros escogimos el chip ADS1198. Este chip generaba simulaciones de muestras de forma continua. El código proporcionado era relativamente sencillo y fácil de entender. Se trataba de un programa realizado en C capaz de leer en espacio de usuario del dispositivo (en nuestro caso la BBB). Es decir, era capaz de recibir y tratar toda la información recibida de forma continua por el chip ADS1198. Hasta aquí todo es relativamente sencillo, gracias al protocolo SPI y al programa de usuario en C era posible gestionar toda la información recibida de las muestras simuladas y realizar el tratamiento pertinente. El único problema hasta aquí es que realmente no era posible gestionar toda la información, si no más bien, casi toda la información.
 
 
 
@@ -38,31 +38,31 @@ Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder com
 %-------------------------------------------------------------------
 \label{cap3:subsec:objetivos}
 
-En ciertos contextos, la pérdida de cierto número de muestras puede ser despreciable y no requerir mayor atención. Sin embargo, en este contexto concreto, al tratarse de procesamiento de señales en tiempo real, la pérdida de un cierto número de muestras, por pequeña que sea, puede ser decisiva a la hora de interpretar la información. El programa inicial escrito en C registraba una pérdida de muestras, que se podía determinar fácilmente hallando la diferencia entre el número de muestras generadas y el número de muestras leídas en el espacio de usuario. 
+En ciertos contextos, la pérdida de cierto número de muestras puede ser despreciable y no requerir mayor atención. Sin embargo, en este contexto concreto, al tratarse de procesamiento de señales en tiempo real, la pérdida de un cierto número de muestras, por pequeña que sea, puede ser decisiva a la hora de interpretar la información. El programa inicial escrito en C registraba una pérdida de muestras, que se podía determinar fácilmente hallando la diferencia entre el número de muestras generadas y el número de muestras leidas en el espacio de usuario. 
 
 El conjunto total de muestras que se perdía durante la transmisión de información era variable según distintas condiciones y factores externos que influyesen en el momento de la recopilación de información. Generalmente, si únicamente se ejecutaba el programa de usuario sin tener otras aplicaciones que consumiesen muchos recursos tanto de memoria como de cálculo computacional  en la BBB, la suma total de muestras perdidas podía encontrarse entre el 1 y el 2\% del total de muestras generadas. Sin embargo, si mientras se ejecutaba el programa en C, se ejecutaba algún otro programa que necesitase algún tipo de recurso para ser ejecutado, el número de muestras perdidas por la lectura en espacio de usuario podía dispararse. 
 
-Observamos que al ejecutar incluso ciertos comandos de consola, podría llegar a darse la situación anteriormente nombrada. Suponiendo que la ejecución del programa se realiza sobre un sistema operativo anfitrión con alguna distribución Linux ejecutándose (en nuestro caso se trataba de una distribución Debian especial para la placa BBB), si tratábamos de ejecutar un comando como \texttt{top} \footnote{Más información sobre el comando top disponible en \href{https://linux.die.net/man/1/top}{https://linux.die.net/man/1/top}} (que muestra las tareas que esten ejecutándose en la máquina anfitriona en tiempo real y actualizándolas en intervalos cortos de tiempo como puede apreciarse en la [Fig \ref{fig:top}]), el número de muestras perdidas aumentaba de forma exponencial. Es decir, para que las pérdidas realmente no fuesen significativas, el dispositivo sobre el que se ejecutase el programa, no debería estar ejecutando nada adicional, o al menos no muchas más aplicaciones. Siendo conscientes de la baja probabilidad de que esta situación se diese en un entorno real, sabíamos que algo teníamos que hacer para evitar esa pérdida de muestras en cualquier situación. Esta pérdida era básicamente producida por interrupciones que lanzaba el propio sistema operativo anfitrión cuando fuese preciso, otorgando la \ac{CPU} a otros procesos que no fuesen el programa que recogía las muestras durante cierto tiempo, suficiente para significar una pérdida representativa.
+Observamos que al ejecutar incluso ciertos comandos de consola, podría llegar a darse la situación anteriormente nombrada. Suponiendo que la ejecución del programa se realiza sobre un sistema operativo anfitrión con alguna distribución linux ejecutándose (en nuestro caso se trataba de una distribución Debian especial para la placa BBB), si tratabamos de ejecutar un comando como \texttt{top} \footnote{Más información sobre el comando top disponible en \href{https://linux.die.net/man/1/top}{https://linux.die.net/man/1/top}} (que muestra las tareas que esten ejecutándose en la máquina anfitriona en tiempo real y actualizadolas en intervalos cortos de tiempo como puede apreciarse en la [Fig \ref{fig:top}]), el número de muestras perdidas aumentaba de forma exponencial. Es decir, para que las pérdidas realmente no fuesen significativas, el dispositivo sobre el que se ejecutase el programa, no debería estar ejecutándo nada adicional, o al menos no muchas más aplicaciones. Siendo conscientes de la baja probabilidad de que esta situación se diese en un entorno real, sabíamos que algo teníamos que hacer para evitar esa pérdida de muestras en cualquier situación. Esta pérdida era básicamente producida por interrupciones que lanzaba el propio sistema operativo anfitrión cuando fuese preciso, otorgando la \ac{CPU} a otros procesos que no fuesen el programa que recogía las muestras durante cierto tiempo, suficiente para significar una pérdida representativa.
 
 \figura{Vectorial/top}{width=1\textwidth}{fig:top}%
 {Ejemplo de salida al ejecutar comando \texttt{top} en una terminal linux}
 
-Sabiendo que el sistema operativo no tenía por qué garantizarnos la CPU para el programa de usuario durante la mayor parte del tiempo que este se encuentra en ejecución, tuvimos que investigar la mejor forma de poder solucionar este problema.
+Sabiendo que el sistema operativo no tenia por qué garantizarnos la CPU para el programa de usuario durante la mayor parte del tiempo que este se encuentra en ejecución, tuvimos que investigar la mejor forma de poder solucionar este problema.
 
 %-------------------------------------------------------------------
 \subsection{Alternativas}
 %-------------------------------------------------------------------
 \label{cap3:subsec:alternativas}
 
-Teniendo en mente el problema anteriormente nombrado, era momento de buscar alternativas para solventarlo. La solución más inmediata que pasó por nuestra cabeza, fue la de sustituir la distribución Debian que utilizábamos en la BBB por una distribución que estuviese pensada para trabajar con análisis y tratamientos de datos en tiempo real. De esta forma, el sistema operativo no interrumpiría el proceso de análisis de muestras otorgando la CPU a otras tareas, y por consiguiente, presumiblemente no se produciría la pérdida de ninguna muestra. Sin embargo está solución parecía poco sostenible, ya que el hecho de recurrir a una distribución tan específica podría no ser accesible para todo tipo de usuarios y dispositivos, sin olvidar la dependencia que se generaría hacia ese sistema operativo concreto, impidiendo con la más absoluta de las certezas que funcionase exitosamente en otros tipo de sistemas operativos (ya que por decirlo de algún modo, sería como un traje a medida). Sin embargo, si se utilizase una distribución genérica, como el Debian que usábamos en aquel momento, no habría problemas, ya que se trata de una distribución de propósito general a la que cualquier usuario podría recurrir de manera relativamente sencilla.
+Teniendo en mente el problema anteriormente nombrado, era momento de buscar alternativas para solventarlo. La solución más inmediata que pasó por nuestra cabeza, fue la de sustituir la distribución Debian que utilizabamos en la BBB por una distribución que estuviese pensada para trabajar con análisis y tratamientos de datos en tiempo real. De esta forma, el sistema operativo no interrumpiría el proceso de análisis de muestras otorgando la CPU a otras tareas, y por consiguiente, presumiblemente no se produciría la pérdida de ninguna muestra. Sin embargo está solución parecía poco sostenible, ya que el hecho de recurrir a una distribución tan específica podría no ser accesible para todo tipo de usuarios y dispositivos, sin olvidar la dependencia que se generaría hacia ese sistema operativo concreto, impidiendo con la más absoluta de las certezas que funcionase éxitosamente en otros tipo de sistemas operativos (ya que por decirlo de algún modo, sería como un traje a medida). Sin embargo, si se utilizase una distribución genérica, como el Debian que usabamos en aquel momento, no habría problemas, ya que se trata de una distribución de proposito general a la que cualquier usuario podría recurrir de manera relativamente sencilla.
 
-Una vez estábamos decididos a mantener el sistema operativo, la solución tenía que encontrarse explorando otras posibles vías. Fue entonces, cuando se nos presentó la posibilidad de usar dos microprocesadores que tenía la BBB, cada uno denominado \ac{PRU}. Estos dos microprocesadores con los que contábamos, podían ser programados específicamente para tratar procesos de análisis y recopilación de muestras en tiempo real. De esta forma, aunque el sistema operativo decidiese ceder el uso de la CPU a otro proceso, las PRUs podrían seguir tratando los procesos en tiempo real en segundo plano, sin necesidad de requerir la CPU principal, por lo que la pérdida de muestras se reduciría totalmente gracias a estos pequeños procesadores que incorpora la placa. Se trata de dos procesadores de alta frecuencia (200-MHz) de arquitectura de 32 bits que ofrecen la posibilidad a los desarrolladores de tratar con operaciones en tiempo real.
+Una vez estabamos decididos a mantener el sistema operativo, la solución tenía que encontrarse explorando otras posibles vías. Fue entonces, cuando se nos presentó la posibilidad de usar dos microprocesadores que tenía la BBB, cada uno denominado \ac{PRU}. Estos dos microprocesadores con los que contábamos, podían ser programados específicamente para tratar procesos de análisis y recopilación de muestras en tiempo real. De esta forma, aunque el sistema operativo decidiese ceder el uso de la CPU a otro proceso, las PRUs podrían seguir tratando los procesos en tiempo real en segundo plano, sin necesidad de requerir la CPU principal, por lo que la pérdida de muestras se reduciría totalmente gracias a estos pequeños procesadores que incorpora la placa. Se trata de dos procesadores de alta frecuencia (200-MHz) de arquitectura de 32 bits que ofrecen la posibilidad a los desarrolladores de tratar con operaciones en tiempo real.
 
 A continuación se enumeran los motivos por los que escogimos recurrir a las PRUs:
 
 \begin{itemize}
   \item Tienen acceso a los pins, así como a la memoria interna de la BBB y a los periféricos del principal procesador principal que incorpora.
-  \item Están diseñados para proveer software específico para periféricos como parte del sistema PRU-ICSS (Programmable Real-time Unit Industrial Control SubSystem).
+  \item Estan diseñados para proveer software específico para periféricos como parte del sistema PRU-ICSS (Programmable Real-time Unit Industrial Control SubSystem).
   \item Son capaces de implementar soluciones relativamente simples a problemas complejos.
   \item Consta de un gran ancho de banda para comunicarse con la CPU principal y sus controladores, por lo que es improbable que se produzca el fenómeno conocido como cuello de botella. \footnote{Se denomina cuello de botella a la situación que se presenta cuando en un proceso productivo, una fase de producción es más lenta que otras, lo que ralentiza el proceso de producción global.}
   \item Existen multitud de recursos y proyectos en los que se utilizan estos procesadores, que pueden ser consultados de forma libre y gratuita en la red.
@@ -83,7 +83,7 @@ Abordar la decisión de trabajar con las PRUs no es una tarea trivial. Requiere u
 Cuando comenzó el desarrollo de este proyecto, existían dos posibles alternativas a escoger a la hora de elegir lenguaje con el que trabajar en las PRUs: 
 
 \begin{itemize}
-  \item \textbf{Posibilidad de programar en C:} Texas instruments introdujo en una de las últimas versiones de Code Composer Studio (Es un entorno de desarrollo integrado que soporta microcontroladores de Texas Instruments y otro tipo de procesadores empotrados) \footnote{Más información sobre este entorno de desarrollo en \href{http://www.ti.com/tool/ccstudio}{http://www.ti.com/tool/ccstudio}} la posibilidad de programar en C para programar las PRU. Las herramientas que proporciona Texas Instruments para ello se denominan CGT (Code Generation Tools) y son relativamente sencillas de utilizar.
+  \item \textbf{Posibilidad de programar en C:} Texas instruments introdujó en una de las últimas versiones de Code Composer Studio (Es un entorno de desarrollo integrado que soporta microcontroladores de Texas Instruments y otro tipo de procesadores empotrados) \footnote{Más información sobre este entorno de desarrollo en \href{http://www.ti.com/tool/ccstudio}{http://www.ti.com/tool/ccstudio}} la posibilidad de programar en C para programar las PRU. Las herramientas que proporciona Texas Instruments para ello se denominan CGT (Code Generation Tools) y son relativamente sencillas de utilizar.
    \item \textbf{Posibilidad de programar en ensamblador:} Hay dos tipos de ensamblador disponibles para la PRU, pasm y clpru.
    \begin{itemize}
    		\item Pasm es el ensamblador original para la PRU. Este ensamblador suporta una unidad de traducción simple y se monta directamente a una imagen binaria (u otros formatos compatibles).
@@ -91,14 +91,14 @@ Cuando comenzó el desarrollo de este proyecto, existían dos posibles alternativa
    \end{itemize}
 \end{itemize}
 
-Ante las alternativas que se nos plantearon, la decisión final fue la de programar en ensamblador, concretamente en pasm, ya que resultó ser una de las opciones más interesantes para este proyecto (aunque somos conscientes de que en la actualidad no es frecuente encontrarse con una situación en la que se requiera programar en ensamblador). Se optó por esta decisión de diseño, ya que investigar cual de las posibilidades era la que más flexibilidad podía aportar al contexto en el que se situaba el proyecto, pasm resultó aportar un mayor control y una valiosa posibilidad de optimizar el código final.
+Ante las alternativas que se nos plantearon, la decisión final fue la de programar en ensamblador, concretamente en pasm, ya que resultó ser una de las opciones más interesantes para este proyecto (aunque somos conscientes de que en la actualidad no es frecuente encontrarse con una situación en la que se requiera programar en ensamblador). Se optó por esta descisión de diseño, ya que investigar cual de las posibilidades era la que más flexibilidad podía aportar al contexto en el que se situaba el proyecto, pasm resultó aportar un mayor control y una valiosa posibilidad de optimizar el código final.
 
 %-------------------------------------------------------------------
 \section{Configuración hardware}
 %-------------------------------------------------------------------
 \label{cap3:sec:config}
 
-Tal y como indicabamos en la sección \ref{cap2:subsec:bbb}, la BBB es un dispositivo que aporta una gran flexibilidad a los desarrollares, gracias a la facilidad que supone ampliar su funcionalidad con multitud de tipos de placas de expansión opcionales. 
+Tal y como indicabamos en la sección \ref{cap2:subsec:bbb}, la BBB es un dispositivo que aporta una gran flexibilidad a los desarrollares, gracias a la facilidad que supone ampliar su funcionalidad con multitud de tipos de placas de expansión opionales. 
 
 \figura{Vectorial/pins}{width=1\textwidth}{fig:pins}%
 {Diagrama de conexiones físicas disponibles en una BBB}
@@ -119,13 +119,13 @@ Cada uno de los pines físicos que incorpora la placa tiene una función determina
 %-------------------------------------------------------------------
 \label{cap3:subsec:dt}
 
-Un \ac{DT} es una descripción del hardware de un sistema. Debería incorporar el nombre de la CPU, la configuración de memoria, y cualquier periférico (interno y externo). Un DT no debería ser usado para describir software, a pesar de que listar los módulos hardware pueda causar que estos se carguen. Es preciso recordar que los DTs son neutros en lo que se refiere al sistema operativo, es decir, no deberían incluir nada específico de Linux por ejemplo.
+Un \ac{DT} es una descripción del hardware de un sistema. Debería incorporar el nombre de la CPU, la configuración de memoria, y cualquier periférico (interno y externo). Un DT no deberia ser usado para describir software, a pesar de que listar los modulos harware pueda causar que estos se carguen. Es preciso recordar que los DTs son neutros en lo que se refiere al sistema operativo, es decir, no deberían incluir nada específico de Linux por ejemplo.
 
 
 \figura{Vectorial/dt}{width=1\textwidth}{fig:dt}%
 {Ejemplo simple de un fichero \texttt{.dts}}
 
-Un DT representa la configuración hardware como si de una jerarquía de nodos se tratase. Cada nodo puede contener propiedades y subnodos. Las propiedades se denominan arrays de bytes, los cuales pueden contener strings, números (big-endian), secuencias arbitrarias de bytes, y cualquier combinación de estos. Por analogía con un sistema de ficheros, los nodos son directorios, y las propiedades son ficheros. 
+Un DT representa la configuración hardware como si de una jerarquía de nodos se tratase. Cada nodo puede contener propiedades y subnodos. Las propiedades se denominan arrays de bytes, los cuales pueden contener strings, numeros (big-endian), secuencias arbitrarias de bytes, y cualquier combinación de estos. Por analogia con un sistema de ficheros, los nodos son directorios, y las propiedades son ficheros. 
 
 Los DT generalmente se encuentran en un formato textual conocido como Device Tree Source (DTS) y son almacenados en ficheros con extensión \texttt{.dts}. La sintaxis DTS es como la de C, con llaves para agrupar código y punto y coma para concluir cada línea. En la [Fig \ref{fig:dt}] puede apreciarse un ejemplo muy simple de este tipo de ficheros.
 
@@ -146,7 +146,7 @@ Estos elementos opcionales son denominados \textit{overlays}. Al DT que se forma
 \figura{Vectorial/dto}{width=1\textwidth}{fig:dto}%
 {Device Tree Overlay del proyecto para la BBB}
 
-Para nuestro proyecto, fue necesaria la creación y personalización de un DTO; la base sobre la empezamos esta creación fue la que se utiliza en el capítulo 13 de Exploring BBB  \citep{exploringBBB}. A partir de ahí se realizaron diversas modificaciones y expansiones para obtener un DTO hecho a medida acorde con las necesidades del proyecto. El resultado final del DTO que se obtuvo finalmente y que es utilizado actualmente en la BBB se ilustra en la [Fig \ref{fig:dto}]. El código final fue comentado de modo que pudiese ser interpretado y comprendido de forma sencilla. Como puede apreciarse en la imagen, el primer paso es indicar cuales van a ser los pines que se van a utilizar de forma exclusiva. A continuación se le asigna un modo a cada uno de los pines anteriormente indicado. De esta forma, el modo que se asigna, la señal que va a ir asociada a ese pin concreto y otra información complementaria puede ser encontrada en el código comentado. Cabe destacar que existen ciertas restricciones a la hora de asignar cierto modo a un pin determinado, ya que no a todos los pines se les puede asignar cualquier modo. En nuestro caso, solo determinados pines de la BBB tienen acceso a determinados modos que permiten interacciones tanto con la PRU0, como con la PRU1. Por ejemplo, el modo \texttt{pr1\_pru0\_pru\_r31\_7} solo puede ser asignado al pin P9\_25 (PRU0), y el modo \texttt{pr1\_pru1\_pru\_r31\_16} solo puede asignarse al pin P9\_26 (PRU1). Los dos ejemplos anteriormente comentados con puestos en práctica en nuestro DTO, aunque la lista de restricciones abarca muchos más modos y pines. Está información puede encontrarse más detallada en la [Fig \ref{fig:restricciones}]. Cabe destacar que este tipo de ficheros \texttt{.dts} sigue siempre una misma estructura en lo que al código respecta, aunque las posibles combinaciones de configuraciones hardware son prácticamente infinitas.
+Para nuestro proyecto, fue necesaria la creación y personalización de un DTO; la base sobre la empezamos esta creación fue la que se utiliza en el capítulo 13 de Exploring BBB  \citep{exploringBBB}. A partir de ahi se realizaron diversas modificaciones y expansiones para obtener un DTO hecho a medida acorde con las necesidades del proyecto. El resultado final del DTO que se obtuvo finalmente y que es utilizado actualmente en la BBB se ilustra en la [Fig \ref{fig:dto}]. El código final fue comentado de modo que pudiese ser interpretado y comprendido de forma sencilla. Como puede apreciarse en la imagen, el primer paso es indicar cuales van a ser los pines que se van a utilizar de forma exclusiva. A continuación se le asigna un modo a cada uno de los pines anteriormente indicado. De esta forma, el modo que se asigna, la señal que va a ir asociada a ese pin concreto y otra información complementaria puede ser encontrada en el código comentado. Cabe destacar que existen ciertas resticciones a la hora de asignar cierto modo a un pin determinado, ya que no a todos los pines se les puede asignar cualquier modo. En nuestro caso, solo determinados pines de la BBB tienen acceso a determinados modos que permiten interacciones tanto con la PRU0, como con la PRU1. Por ejemplo, el modo \texttt{pr1\_pru0\_pru\_r31\_7} solo puede ser asignado al pin P9\_25 (PRU0), y el modo \texttt{pr1\_pru1\_pru\_r31\_16} solo puede asignarse al pin P9\_26 (PRU1). Los dos ejemplos anteriormente comentados con puestos en práctica en nuestro DTO, aunque la lista de restricciones abarca muchos más modos y pines. Está información puede encontrarse más detallada en la [Fig \ref{fig:restricciones}]. Cabe destacar que este tipo de ficheros \texttt{.dts} sigue siempre una misma estructura en lo que al código respecta, aunque las posibles combinaciones de configuraciones hardware son prácticamente infinitas.
 
 \figura{Vectorial/restricciones}{width=1\textwidth}{fig:restricciones}%
 {Restricciones en la asignación de modos a pines relevantes para el proyecto}
@@ -156,7 +156,7 @@ Para nuestro proyecto, fue necesaria la creación y personalización de un DTO; la
 %-------------------------------------------------------------------
 \label{cap3:subsec:conexiones}
 
-Una vez diseñada la configuración hardware, era momento de realizar las conexiones físicas mediante cableado. Entre los objetivos que han de satisfacer estas conexiones físicas, cabe destacar los siguientes:
+Una vez diseñada la configuración hardware, era momento de realizar las conexciones físicas mediante cableado. Entre los objetivos que han de satisfacer estas conexiones físicas, cabe destacar los siguientes:
 
 \begin{itemize}
 \item Alimentar el ADS1198, ya que se alimenta a través de la BBB. 
@@ -245,7 +245,7 @@ El software más destacado que se ejecuta en la BBB es el siguiente:
 \item Programa principal desarrollado en C que se ejecuta en espacio de usuario denominado \texttt{medcape.c}.
 \item Programa desarrollado en código ensamblador, del que se hablará con más detenimiento más adelante denominado \texttt{PRUADC.p}.
 \item Programa desarrollado en C, denominado \texttt{mem2file.c} y encargado de la escritura de datos de memoria a un fichero externo.
-\item Programa muy sencillo desarrollado en Python, y denominado \texttt{BTConnection.py} y encargado de la recepción y envío de información a otros dispositivos.
+\item Programa muy sencillo desarrollado en Python, y denominado \texttt{BTConnection.py} y encargado de la recepción y envio de información a otros dispositivos.
 \end{itemize}
 
 \figura{Vectorial/pru}{width=0.8\textwidth}{fig:pru}%
@@ -253,7 +253,7 @@ El software más destacado que se ejecuta en la BBB es el siguiente:
 
 La relación de este ecosistema es bastante simple. El programa principal \texttt{medcape.c}, el cual está programado para ejecutarse según enciende la BBB, es el encargado de realizar las inicializaciones pertinentes para que funcione el intercambio de información, de mapear ciertas regiones de memoria, de ejecutar el binario principal\footnote{Código ensamblador compilado que ejecuta el PRU, concretamente el fichero \texttt{PRUADC.p}}, así como de capturar y generar interrupciones hacia el código que ejecuta el PRU. De forma paralela a la ejecución del programa en C, se ejecuta el programa en ensamblador ya que se da la orden de ejecutar el binario desde el propio programa en C. 
 
-El programa en C consta de un hilo que es el encargado de realizar las interacciones pertinentes con el código que se ejecuta en el PRU. Este hilo entra en modo de espera indefinido hasta que reciba una interrupción por parte del código ejecutándose en el PRU indicando que las muestras están listas y guardadas en el banco de memoria del PRU (Se ilustra más información sobre estos bancos de memoria en la [Fig \ref{fig:pru}]).
+El programa en C consta de un hilo que es el encargado de realizar las interacciones pertinentes con el código que se ejecuta en el PRU. Este hilo entra en modo de espera indefinido hasta que reciba una interrupción por parte del código ejecutandose en el PRU indicando que las muestras estan listas y guardadas en el banco de memoria del PRU (Se ilustra más información sobre estos bancos de memoria en la [Fig \ref{fig:pru}]).
 
 Cuando la recopilación del paquete de muestras está lista y almacenada en el banco de memoria del PRU, se manda una interrupción desde el código ensamblador al programa C que se encontraba en espera de capturar un evento concreto. La ejecución continua con una llamada al programa en C \texttt{mem2file.c}, encargado de acceder a las regiones concretas del banco de memoria del PRU en la que el código ensamblador ha guardado las muestras, y guardarlas en un fichero (generalmente con extensión \texttt{.data}). Además de guardarse en este fichero, el paquete de muestras es enviado por una tubería de la que ahora hablaremos.
 
@@ -308,7 +308,7 @@ Cabe destacar que cada registro en ensamblador tiene una capacidad de 4 bytes. D
 \item \textbf{Registro r19}: Cuarto registro (3 bytes)
 \item \textbf{Registro r20}: Quinto registro (3 bytes)
 \item \textbf{Registro r23}: Sexto registro (3 bytes)
-\item \textbf{Registro r27}: Séptimo registro (1 byte)
+\item \textbf{Registro r27}: Séptimo registro (3 bytes)
 \end{itemize}
 
 Esta información se refleja en forma de código en las figuras [Fig \ref{fig:loop1}] y [Fig \ref{fig:loop2}]. En estas figuras se muestra el código de la función SPICLK\_LOOP escrito en código ensamblador, en la cual se refleja el proceso de iteración sobre cada uno de los bits concretos, así como el uso de todos los registros anteriormente descritos.
@@ -328,9 +328,9 @@ Esta información se refleja en forma de código en las figuras [Fig \ref{fig:loop
 %-------------------------------------------------------------------
 \label{cap3:sec:guardado}
 
-Según se van procesando las muestras, es necesario almacenarlas en algún sitio, para luego poder acceder a ellas desde el programa en C, del que se habla en la sección \ref{cap3:sec:lectura} (que a su vez vuelve a transmitir la información a otras vías). Es en este caso cuando entran en juego los bancos de memoria del PRU, en la que se almacenan de forma temporal todas las muestras que se recogen.
+Según se van procesando las muestras, es necesario almacenarlas en algun sitio, para luego poder acceder a ellas desde el programa en C, del que se habla en la sección \ref{cap3:sec:lectura} (que a su vez vuelve a transmitir la información a otras vías). Es en este caso cuando entran en juego los bancos de memoria del PRU, en la que se almacenan de forma temporal todas las muestras que se recogen.
 
-Este proceso de guardado de muestras en memoria se realiza en ensamblador. Para guardar la información de una muestra completa, se almacena la información almacenada en cada uno de los registros indicados en la sección \ref{cap3:sec:comunicacion}. Es decir, una vez todos estos registros están rellenos con la información de las muestras, el siguiente paso es el almacenamiento en memoria de cada uno de estos registros, que una vez guardados en posiciones de memoria consecutivas, reflejan el contenido de una muestra completa. 
+Este proceso de guardado de muestras en memoria se realiza en ensamblador. Para guardar la información de una muestra completa, se almacena la información almacenada en cada uno de los registros indicados en la seccion \ref{cap3:sec:comunicacion}. Es decir, una vez todos estos registros están rellenos con la información de las muestras, el siguiente paso es el almacenamiento en memoria de cada uno de estos registros, que una vez guardados en posiciones de memoria consecutivas, reflejan el contenido de una muestra completa. 
 
 Una vez se guardan las muestras, se lanza una interrupción del PRU hacia el programa principal en C, el cual se encuentra en ejecución y a la espera de una interrupción por parte del código ensamblador. Una vez capturada esta interrupción, la ejecución del código en C puede reanudarse (tal y como se explica en la sección \ref{cap3:sec:ecosistema}).
 
@@ -343,7 +343,7 @@ Todo este proceso se refleja en el código ensamblador, concretamente en la funci
 {Función STORE\_RAM en código ensamblador (primera parte)}
 
 \figura{Vectorial/ram2}{width=0.9\textwidth}{fig:ram2}%
- {Función STORE\_RAM en código ensamblador (segunda parte)}
+{Función STORE\_RAM en código ensamblador (segunda parte)}
 
 \clearpage
 
